--- a/translations/messages.en.xlf
+++ b/translations/messages.en.xlf
@@ -17,6 +17,18 @@
         <source>Jobeet - Your best job board</source>
         <target>Jobeet - Your best job board</target>
       </trans-unit>
+      <trans-unit id="jC3twAE" resname="Admin Panel">
+        <source>Admin Panel</source>
+        <target>Admin Panel</target>
+      </trans-unit>
+      <trans-unit id="0FJ_Sz1" resname="Logout">
+        <source>Logout</source>
+        <target>Logout</target>
+      </trans-unit>
+      <trans-unit id="v9QCsvb" resname="Sign in">
+        <source>Sign in</source>
+        <target>Sign in</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
