--- a/translations/messages.pl.xlf
+++ b/translations/messages.pl.xlf
@@ -17,6 +17,18 @@
         <source>Jobeet - Your best job board</source>
         <target>Jobeet - Twoja najlepsza tablica ogłoszeń</target>
       </trans-unit>
+      <trans-unit id="jC3twAE" resname="Admin Panel">
+        <source>Admin Panel</source>
+        <target>Panel administratora</target>
+      </trans-unit>
+      <trans-unit id="0FJ_Sz1" resname="Logout">
+        <source>Logout</source>
+        <target>Wyloguj</target>
+      </trans-unit>
+      <trans-unit id="v9QCsvb" resname="Sign in">
+        <source>Sign in</source>
+        <target>Zaloguj się</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
