--- a/translations/messages.pl.xlf
+++ b/translations/messages.pl.xlf
@@ -29,6 +29,10 @@
         <source>Sign in</source>
         <target>Zaloguj się</target>
       </trans-unit>
+      <trans-unit id="bVBmzKs" resname="Jobs in the %category% category">
+        <source>Jobs in the %category% category</source>
+        <target>Oferty pracy w kategorii %category%</target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
