--- a/translations/messages.ru.xlf
+++ b/translations/messages.ru.xlf
@@ -33,6 +33,14 @@
         <source>Jobs in the %category% category</source>
         <target>Вакансии в %category% категории</target>
       </trans-unit>
+      <trans-unit id="hDTa85S" resname="]-Inf,0] Expired|{1}Expires in 1 day|]1,Inf[ Expires in %days% days">
+        <source>]-Inf,0] Expired|{1}Expires in 1 day|]1,Inf[ Expires in %days% days</source>
+        <target>]-Inf,0] Expired|{1}Expires in 1 day|]1,Inf[ Expires in %days% days</target>
+      </trans-unit>
+      <trans-unit id="PhB5DGQ" resname="[Bookmark this &lt;a href=&quot;%url%&quot;&gt;URL&lt;/a&gt; to manage this job in the future]">
+        <source>[Bookmark this &lt;a href="%url%"&gt;URL&lt;/a&gt; to manage this job in the future]</source>
+        <target><![CDATA[[Добавьте этот <a href="%url%">URL</a> в закладки, чтобы управлять этой работой в будущем]]]></target>
+      </trans-unit>
     </body>
   </file>
 </xliff>
